--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   "dependencies": {
     "@expo-google-fonts/jost": "^0.1.0",
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
+    "date-fns": "^2.21.3",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "i": "^0.3.6",
+    "lottie-react-native": "3.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
